tests/machine/x/cpp/left_join.error
/workspace/mochi/tests/machine/x/cpp/left_join.cpp:42:12: error: ‘c’ was not declared in this scope
   42 |   decltype(c) customer;
      |            ^
/workspace/mochi/tests/machine/x/cpp/left_join.cpp:42:12: error: ‘c’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/left_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/left_join.cpp:58:42: error: cannot convert ‘Customer’ to ‘int’ in initialization
   58 |           __items.push_back(Result{o.id, c, o.total});
      |                                          ^
      |                                          |
      |                                          Customer
/workspace/mochi/tests/machine/x/cpp/left_join.cpp:62:42: error: cannot convert ‘Customer’ to ‘int’ in initialization
   62 |           __items.push_back(Result{o.id, c, o.total});
      |                                          ^
      |                                          |
      |                                          Customer
