tests/machine/x/cpp/left_join.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <any>
#include <iostream>
#include <string>
#include <vector>

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}
inline void __print_any(const std::any &a) {
  if (a.type() == typeid(int))
    std::cout << std::any_cast<int>(a);
  else if (a.type() == typeid(double))
    std::cout << std::any_cast<double>(a);
  else if (a.type() == typeid(bool))
    std::cout << (std::any_cast<bool>(a) ? "true" : "false");
  else if (a.type() == typeid(std::string))
    std::cout << std::any_cast<std::string>(a);
}

struct Customer {
  int id;
  decltype(std::string("Alice")) name;
};
struct Order {
  int id;
  int customerId;
  int total;
};
struct Result {
  std::any orderId;
  decltype(c) customer;
  std::any total;
};
int main() {
  std::vector<Customer> customers = {Customer{1, std::string("Alice")},
                                     Customer{2, std::string("Bob")}};
  std::vector<Order> orders = {Order{100, 1, 250}, Order{101, 3, 80}};
  std::vector<Result> result = ([&]() {
    std::vector<Result> __items;
    for (auto o : orders) {
      {
        bool __matched0 = false;
        for (auto c : customers) {
          if (!((o.customerId == c.id)))
            continue;
          __matched0 = true;
          __items.push_back(Result{o.id, c, o.total});
        }
        if (!__matched0) {
          auto c = std::decay_t<decltype(*(customers).begin())>{};
          __items.push_back(Result{o.id, c, o.total});
        }
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Left Join ---") << std::endl;
  for (auto entry : result) {
    {
      std::cout << std::string("Order");
      std::cout << ' ';
      __print_any(entry.orderId);
      std::cout << ' ';
      std::cout << std::string("customer");
      std::cout << ' ';
      std::cout << entry.customer;
      std::cout << ' ';
      std::cout << std::string("total");
      std::cout << ' ';
      __print_any(entry.total);
      std::cout << std::endl;
    }
  }
  return 0;
}
